; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-service.c_obs_service_defaults.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-service.c_obs_service_defaults.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_service_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @obs_service_defaults(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.obs_service_info*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.obs_service_info* @find_service(i8* %4)
  store %struct.obs_service_info* %5, %struct.obs_service_info** %3, align 8
  %6 = load %struct.obs_service_info*, %struct.obs_service_info** %3, align 8
  %7 = icmp ne %struct.obs_service_info* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.obs_service_info*, %struct.obs_service_info** %3, align 8
  %10 = call i32* @get_defaults(%struct.obs_service_info* %9)
  br label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %8
  %13 = phi i32* [ %10, %8 ], [ null, %11 ]
  ret i32* %13
}

declare dso_local %struct.obs_service_info* @find_service(i8*) #1

declare dso_local i32* @get_defaults(%struct.obs_service_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
